# OxiDrop

./: .gitignore  P2P_FileSharing_SystemDesign.md  README.md
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  transfer.rs  types.rs  webrtc_utils.rs
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src-tauri/: tauri.conf.json
frontend/src/components/: ConnectionPanel.jsx  DeveloperConsole.jsx  FileTransferPanel.jsx  Header.jsx  LandingPage.jsx  P2PSimulator.jsx  QRCodeDisplay.jsx  QRScannerModal.jsx  ReceiveTab.jsx  ShareTab.jsx  TelemetryPanel.jsx  ThreeBackground.jsx
frontend/src/hooks/: useFileTransfer.js  useOxiDrop.js
frontend/src/utils/: helpers.js  qrcode.js
mobile/: App.js  app.json  package-lock.json  package.json
signaling-server/: ecosystem.config.cjs  package-lock.json  package.json
signaling-server/src/: config.js  db.js  index.js  routes.js  socket.js
signaling-server/src/middleware/: errorHandler.js
signaling-server/src/models/: File.js  Request.js  Room.js  User.js
signaling-server/src/utils/: logger.js
