[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Pure Rust implementation of WebRTC
webrtc = "0.10.1" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
bytes = "1"

